[DS-13] templates kunnen aangemaakt worden
